# OpenCV_Learning

./: 1.avi  2.avi  3.avi  CMakeCache.txt  CMakeLists.txt  Lap_test.cpp  bound_video.cpp  box.avi  contour.cpp  contour2.cpp  cv_video.cpp  huidiao.cpp  image_seg.cpp  image_segmentation.cpp  img_seg_vac.cpp  julibianhuan.cpp  main.cpp  open.cpp  opencvtest.cpp  ostu_test.cpp  seg1.cpp  seg2.cpp  seg3.cpp  tubao.cpp  watershed.cpp  直方图均衡.cpp
Notes/: C++_Mat.md  C++笔记.md  Hog特征和SVM分类器.md  Markdown.md  OTSU.md  git_learning.md  haotu.cpp  opencv3_bug.md  watershed.md  分水岭算法.md  图像处理.md  图像处理2.md  快捷键.md  粘连分割流程.md  高斯平滑.md
原来的/: c_cpp_properties.json  launch.json  settings.json  tasks.json
